# flutter_native_library

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_native_library_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_native_library.dart  flutter_native_library_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  flutter_native_library.c
src/include/: NativeLibrary.hpp
src/include/Global/: Global.hpp
src/include/Image/: Image.hpp
src/include/Result/: Result.hpp
src/include/USBDevice/: USBDevice.hpp
src/interface/: NativeLibraryInterface.cpp  NativeLibraryInterface.hpp
src/lib/Log/: Log.cpp  Log.hpp
src/src/Global/: Global.cpp
src/src/Image/: Image.cpp
src/src/LibraryContext/: LibraryContext.cpp  LibraryContext.hpp
src/src/USBDevice/: USBDevice.cpp
windows/: CMakeLists.txt
